restoring index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal portfolio of [Your Name]">
+    <title>Jeel's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h1>Welcome to Jeel's Portfolio</h1>
+        <img src="your-photo.jpg" alt="Your photo">
+        <p>Hello! I am jeel, a passionate Software engineer with experience in C++, C, Python, Html, CSS, JavaScript.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="https://github.com/yourusername/project1" target="_blank">Project 1</a></li>
+            <li><a href="https://github.com/yourusername/project2" target="_blank">Project 2</a></li>
+        </ul>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>C++</li>
+            <li>HTML/CSS</li>
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <p>[Your Work Experience]</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <ul>
+            <li><a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/yourusername" target="_blank">GitHub</a></li>
+            <li><a href="resume.pdf" target="_blank">Download Resume</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Jeel Patel</p>
+    </footer>
+</body>
+</html>
