--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <section id="contact">
         <h2>Contact</h2>
         <ul>
-            <li><a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a></li>
-            <li><a href="https://github.com/yourusername" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/jeel-patel-756913268/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/jeelp3801" target="_blank">GitHub</a></li>
             <li><a href="resume.pdf" target="_blank">Download Resume</a></li>
         </ul>
     </section>
