--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="home">
         <h1>Welcome to Jeel's Portfolio</h1>
-        <img src="your-photo.jpg" alt="Your photo">
+        <img src="ProfilePic.jpeg" alt="Your photo">
         <p>Hello! I am jeel, a passionate Software engineer with experience in C++, C, Python, Html, CSS, JavaScript.</p>
     </section>
 
