--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <section id="projects">
         <h2>Projects</h2>
         <ul>
-            <li><a href="P" target="_blank">Project 1</a></li>
-            <li><a href="graphing_calc.py" target="_blank">Project 2</a></li>
+            <li><a href="https://github.com/jeelp3801/Project---TicTacToe" target="_blank">Project 1</a></li>
+            <li><a href="https://github.com/jeelp3801/Project---GraphingCalc" target="_blank">Project 2</a></li>
         </ul>
     </section>
 
