Favicon and some changes

--- a/index.html
+++ b/index.html
@@ -24,34 +24,53 @@
     <section id="home">
         <h1>Welcome to Jeel's Portfolio</h1>
         <img src="ProfilePic.jpeg" alt="Your photo">
-        <p>Hello! I am jeel, a passionate Software engineer with experience in C++, C, Python, Html, CSS, JavaScript.</p>
+        <p>Hello! I am jeel, a passionate Software engineer student with experience in C++, C, Python, Html, CSS and JavaScript.</p>
+        <div class="extra-details">
+            <p>I'm dedicated to building user-friendly applications and exploring innovative technologies.</p>
+            <p>In my free time, I enjoy contributing to open-source projects and exploring Artificial Intellignce.</p>
+        </div>
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <h1>Projects</h1>
         <ul>
-            <li><a href="https://github.com/jeelp3801/Project---TicTacToe" target="_blank">Project 1</a></li>
-            <li><a href="https://github.com/jeelp3801/Project---GraphingCalc" target="_blank">Project 2</a></li>
+            <li><a href="https://github.com/jeelp3801/Project---TicTacToe" target="_blank">Project - TicTacToe</a></li>
+            <li><a href="https://github.com/jeelp3801/Project---GraphingCalc" target="_blank">Project - Graphing Calculator</a></li>
         </ul>
+        <div class="extra-details">
+            <p>TicTacToe is an AI based python project where the computer uses a Min-Max function to calculate predict the best moves to play TicTacToe. This project uses a module called pygame.</p> <br>
+            <p>Graphing Calculator is a python based project which can graph any given function. This project uses modules like turtle and sympy.</p><br>
+            <p>Both the projects are available via github.</p>
+        </div>
     </section>
 
     <section id="skills">
-        <h2>Skills</h2>
+        <h1>Skills</h1>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>C++</li>
+            <li>C/C++</li>
             <li>HTML/CSS</li>
+            <li>JavaScript</li>
         </ul>
+        <div class="extra-details">
+            <p>I'm dedicated to learning new programming languages and can easily grasp most of them.</p><br>
+            <p>Currently I have been working with HTML, CSS, Python and C++ for my computer science courses.</p><br>
+            <p>My mastery in said languages is above average with sevral projects in each of them.</p>
+        </div>
     </section>
 
     <section id="experience">
-        <h2>Experience</h2>
-        <p>[Your Work Experience]</p>
+        <h1>Experience</h1>
+        <p>Software Technician at Mr. Lube</p>
+        <div class="extra-details">
+            <p>I have worked part time as a software tech at Mr. Lube where I was tasked with operating and maintaining machinery.</p><br>
+            <p>Moreover occasional bug fixes and maintaining of Self cleaning machinery was also one of my duties.</p><br>
+            <p>This work allowed me to learn more about team work and proper cooperation among team mates in software development.</p>
+        </div>
     </section>
 
     <section id="contact">
-        <h2>Contact</h2>
+        <h1>Contact</h1>
         <ul>
             <li><a href="https://www.linkedin.com/in/jeel-patel-756913268/" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/jeelp3801" target="_blank">GitHub</a></li>
