Updating leetcode link

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/jeel-patel-756913268/" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/jeelp3801" target="_blank">GitHub</a></li>
+            <li><a href="https://leetcode.com/u/Jeelpatel1/" target="_blank">Leet Code</a></li>
             <li><a href="Jeel patel-4.pdf" download>Download Resume</a></li>
         </ul>
     </section>
