Assigning pics into webpage

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="https://github.com/jeelp3801/Project---GraphingCalc" target="_blank">Project - Graphing Calculator</a></li>
         </ul>
         <div class="extra-details">
+            <img src="TicTacToePic.png" alt="TicTacToe"><img src="GraphPic.jpeg" alt="Graph project photo">
             <p>TicTacToe is an AI based python project where the computer uses a Min-Max function to calculate predict the best moves to play TicTacToe. This project uses a module called pygame.</p> <br>
             <p>Graphing Calculator is a python based project which can graph any given function. This project uses modules like turtle and sympy.</p><br>
             <p>Both the projects are available via github.</p>
