Updating index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="extra-details">
             <img src="GraphPic.jpeg" alt="Graph project photo">
             <img src="TicTacToePic.png" alt="TicTacToe">
-            <p>TicTacToe is an AI based python project where the computer uses a Min-Max function to calculate predict the best moves to play TicTacToe. This project uses a module called pygame.</p> <br>
+            <p>TicTacToe is an AI based python project where the computer uses a Min-Max function to calculate predict the best moves to play TicTacToe. This project uses a module called pygame.</p>
             <p>Graphing Calculator is a python based project which can graph any given function. This project uses modules like turtle and sympy.</p>
         </div>
     </section>
